# OpenLicenseCommunication

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  fileencrypter.cpp  fileencrypter.h  keycreator.cpp  keycreator.h  license.cpp  license.h  licenseencrypter.cpp  licenseencrypter.h  modulecommunicator.cpp  modulecommunicator.h  networkclient.cpp  networkclient.h  report.cpp  report.h  request.cpp  request.h  servercommunicator.cpp  servercommunicator.h  servicecommunicator.cpp  servicecommunicator.h  violation.cpp  violation.h  websocketserver.cpp  websocketserver.h
win64/: botan.exp  botan.lib
win64/includes/botan/: build.h
